--- a/Dockerfile_cron
+++ b/Dockerfile_cron
@@ -1,5 +1,5 @@
 # Dockerfile to create image with cron services
-FROM ubuntu:latest
+FROM ubuntu:20.04
 
 WORKDIR /home/ec2-user/twitterBot
 
@@ -10,22 +10,27 @@ RUN chmod 0644 /home/ec2-user/twitterBot/main.py
 
 #Install Cron
 RUN apt-get update
+
 RUN apt-get -y install cron
 
-RUN apt-get install -y python3
-RUN apt-get install -y python3-pip
-RUN pip install --upgrade pip
+RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-pip
+
+RUN pip3 install --upgrade pip
 
 # install dependencies
 RUN pip3 install --no-cache-dir -r requirements.txt
 
-
 # Add the cron job
-RUN crontab -l | { cat; echo "* * * * * python3 /home/ec2-user/twitterBot/main.py"; } | crontab -
+RUN crontab -l | { cat; echo "*/30 * * * * python3 /home/ec2-user/twitterBot/main.py"; } | crontab -
 
-ENV AWS_ACCESS_KEY_ID=AKIARC2VSSLXA6GKRVFF
-ENV AWS_SECRET_ACCESS_KEY=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
+#input or pull AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY for AWS account from secrets
+ENV AWS_ACCESS_KEY_ID={Add_Credentials}
+ENV AWS_SECRET_ACCESS_KEY={Add_Credentials}
 ENV AWS_DEFAULT_REGION=us-east-1c
+ENV password=Docker
+ENV image=db
 
-# Run the command on container startup
-CMD cron
+# entrypoint moves env variables to /etc/environment so they're accessible by cron
+CMD ./entrypoint.sh
